# flir_ros

./: CMakeLists.txt  README.md  package.xml
launch/: flir_ros.launch
src/: flir_node.cpp
